change btn name to send

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</div>
 					</div>
 					<div class="btn-wrapper inline-block">
-						<button class="form-control btn btn-default btn-send"><i class="fas fa-search"></i> Search</button>
+						<button class="form-control btn btn-default btn-send"><i class="fas fa-search"></i> Send</button>
 					</div>
 				</div>
 			</div>
